"Create Portfolio Page"

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+body {
+    background-color: #02201d ;
+    background-image: url('../assets/bg_pattern2.png');
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
+    color: antiquewhite;
+}
