--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
-    background-color: #02201d ;
-    background-image: url('../assets/bg_pattern2.png');
+        background: rgb(101,101,101);
+        background: linear-gradient(114deg, rgba(101,101,101,1) 0%, rgba(49,49,49,1) 8%, rgba(28,25,25,1) 15%, rgba(0,0,0,1) 37%, rgba(0,0,0,1) 100%);
 }
 
 * {
