--- a/src/components/about_me/style.css
+++ b/src/components/about_me/style.css
@@ -11,3 +11,36 @@
 h1 {
     font-size: 50px;
 }
+
+
+.header_socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8rem;
+    position: absolute;
+    left: 20rem;
+    bottom: 3rem;
+}
+
+.header_socials::after {
+    content: "";
+    width: 1px;
+    height: 2rem;
+    background: antiquewhite;
+}
+
+.scroll_down {
+    position: absolute;
+    right: 10.3rem;
+    bottom: 5rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: 0.9rem;
+
+}
+
+.me {
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+}
