--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,52 @@ body {
 }
 
 * {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
     font-family: 'Poppins', sans-serif;
     color: antiquewhite;
+}
+
+html {
+    scroll-behavior: smooth;
+
+}
+
+a {
+    transition: all 400ms ease;
+}
+
+a:hover {
+    color: white;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+img {
+    display: block;
+    margin: auto;
+    width: 30%;
+    object-fit: cover;
+}
+
+.btn {
+    width: max-content;
+    display: inline-block;
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid antiquewhite;
+}
+
+.btn:hover {
+    background: rgb(19, 77, 24);
+    color: antiquewhite;
+    border-color: transparent;
 }
