--- a/src/components/projects/style.css
+++ b/src/components/projects/style.css
@@ -1,8 +1,12 @@
 .portfolio_container {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2.5rem;
-    border: 10px solid red;
+    grid-auto-rows: 22rem;
+    grid-template-columns: repeat(auto-fill,minmax(20rem,1fr));
+    margin-top: 100px;
+    gap: 8rem;
+    justify-items: center;
+    
+    
 }
 
 
@@ -13,20 +17,110 @@
     
 }
 
-.img_project{
-    max-width: 100%;
-    max-height: 100%;
-    width: auto ;
-    height: 250px;
-    
-}
+/*  Personalización de la Card */
 
 .card {
+    width: 262px;
+    height: 343px;
+    transition: all 0.2s;
     position: relative;
-    width: 350px;
-    height: 350px;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgb(54, 52, 52);
-    background-color: rgb(24, 23, 23);
-    border: 4px solid rgb(40, 38, 38);
-}
+  }
+  
+  .card-inner {
+    display: flex;
+    justify-content: center;
+    width: inherit;
+    height: inherit;
+    background: rgba(255,255,255,.05);
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
+    backdrop-filter: blur(20px);
+    border-radius: 8px;
+  }
+  
+  
+  .circle {
+    width: 100px;
+    height: 100px;
+    background: radial-gradient(#b0e633, #53ef7d);
+    border-radius: 50%;
+    position: absolute;
+    animation: move-up6 2s ease-in infinite alternate-reverse;
+  }
+  
+  .circle:nth-child(1) {
+    top: -25px;
+    left: -25px;
+  }
+  
+  .circle:nth-child(2) {
+    bottom: -25px;
+    right: -25px;
+    animation-name: move-down1;
+  }
+  
+  @keyframes move-up6 {
+    to {
+      transform: translateY(-10px);
+    }
+  }
+  
+  @keyframes move-down1 {
+    to {
+      transform: translateY(10px);
+    }
+  }
+
+
+  /*  Personalización de la Card */
+
+  .card_title {
+    position: absolute;
+    top:5px;
+    font-size: xx-large;
+    text-align: center;
+    
+  }
+
+  .linkeable {
+    position: absolute;
+    font-size: 20px;
+    bottom:30px;
+  }
+
+  .linkeable:hover {
+    color: #26d407;
+    text-shadow:
+    0 0 7px #167106,
+    0 0 10px #167106,
+    0 0 21px #167106,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa;
+   
+  }
+
+  .stack_title {
+    position: absolute;
+    top:20px;
+    font-size: xx-large;
+    text-align: center;
+    
+  }
+
+  .stack {
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    gap:10px;
+    top: 40%;
+    left: 10%;
+    margin: -15px 0 0 -15px;
+  }
+
+  .stack_img {
+    max-width: 60%;
+    width: 300px;
+    
+  }
